создание методов информации из токенов. Работа над экспортом.